packages/markdown-core/elements/formula_scanners.c
/* Generated by re2c 4.6 */
#include "formula_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */








bufsize_t scan_formula_dollar_inline_open(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t start = p;

{
  unsigned char yych;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '$') goto yy1;
  ++p;
  { return 0; }
yy1:
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t scan_formula_dollar_backtick_open(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t start = p;

{
  unsigned char yych;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '$') goto yy4;
  ++p;
yy3:
  { return 0; }
yy4:
  ++p;
  yych = (p < remaining ? input[p] : 0);
  if (yych != '`') goto yy3;
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t scan_formula_dollar_display_open(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t start = p;

{
  unsigned char yych;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '$') goto yy7;
  ++p;
yy6:
  { return 0; }
yy7:
  ++p;
  yych = (p < remaining ? input[p] : 0);
  if (yych != '$') goto yy6;
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t scan_formula_latex_backslash_inline_open(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '\\') goto yy10;
  ++p;
yy9:
  { return 0; }
yy10:
  ++p;
  marker = p;
  yych = (p < remaining ? input[p] : 0);
  if (yych != '\\') goto yy9;
  ++p;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '(') goto yy11;
  p = marker;
  goto yy9;
yy11:
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t scan_formula_latex_backslash_display_open(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '\\') goto yy14;
  ++p;
yy13:
  { return 0; }
yy14:
  ++p;
  marker = p;
  yych = (p < remaining ? input[p] : 0);
  if (yych != '\\') goto yy13;
  ++p;
  yych = (p < remaining ? input[p] : 0);
  if (yych == '[') goto yy15;
  p = marker;
  goto yy13;
yy15:
  ++p;
  { return (bufsize_t)(p - start); }
}

}
